kind/backend_dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: bookstore_backend_img:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
