kind/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    matchLabels:
      app: mongodb
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    matchLabels:
      app: backend
  ports:
      port: 8000
      targetPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector: 
    matchLabels:
      app: frontend 
  type: LoadBalancer
  ports:
      port: 80
      targetPort: 3000
